--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vite-plugin-gfont",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Automatically inject google font tags into your page with Vite",
   "main": "dist/vite-plugin-gfont.umd.js",
   "module": "dist/vite-plugin-gfont.esm.js",
-  "typings": "dist/types/index.d.ts",
+  "typings": "dist/types/main.d.ts",
   "keywords": [
     "plugin",
     "google",
@@ -18,22 +18,22 @@
   "author": "BackRunner",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^21.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/node": "^16.18.61",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.53.0",
     "eslint-config-alloy": "^4.4.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.1",
+    "eslint-config-prettier": "^8.10.0",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-typescript2": "^0.31.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.14"
+    "rollup-plugin-typescript2": "^0.31.2",
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5",
+    "vite": "^2.9.16"
   }
 }
